oxiplate-derive/tests/broken/statements/closed-like-comment-whitespace-remove.stderr
error: Expected `%}`, `-%}`, or `_%}`
 --> tests/broken/statements/closed-like-comment-whitespace-remove.rs:4:32
  |
4 | #[oxiplate_inline("{% continue -#}")]
  |                                ^^^
